# Pyslvs-UI

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  AppImageAssistant  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  Pyslvs-PyQt5.e4p  Pyslvs-PyQt5.wpr  Pyslvs.e4p  README.md  Untitled  a.csv  appimage_recipe.sh  appveyor.yml  changelog  changelog.md  compile_api_doc.py  compile_resource.py  doc-requirements.txt  generate_source.py  icons.qrc  icons_rc.py  launch_pyslvs.coverage  launch_pyslvs.py  launch_pyslvs.spec  launch_test.py  launch_zmq_server.py  mkdocs.yml  mypy.ini  preview.qrc  preview_rc.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_pyslvs.py  verlap=scalexy  winBuild.bat
.eric6project/: Pyslvs-PyQt5.e4q  Pyslvs-PyQt5.e6t  Pyslvs.e4q  Pyslvs.e6t
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-related.md  feature_request.md
.github/workflows/: deploy.yaml  flake8.yaml  flake8.yml  lint.yaml  mypy.yaml  mypy.yml  pythonapp.yml
_eric6project/: Pyslvs-PyQt5.e4q  Pyslvs-PyQt5.e6t  Pyslvs.e4q  Pyslvs.e6t
core/: QtModules.py  Ui_custom.py  Ui_custom_table.py  Ui_main.py  __init__.py  calculation.py  canvas.py  list_process.py  main.py  main.ui  main_modules.py  modules.py  slvs.py  test0.py  testUndo.py
core/calculation/: __init__.py  algorithm.py  calculation.py  canvas.py  canvasItem.py  canvasScene.py  canvasView.py  canvas_0.py  canvas_1.py  color.py  list_process.py  modules.py  pathSolving.py  pathTrack.py  planarSolving.py  planeSolving.py  undoRedo.py
core/canvas/: canvas.py
core/dialog/: Ui_association.py  Ui_batchMoving.py  Ui_delete.py  Ui_replacePoint.py  Ui_run_Path_Track.py  Ui_template.py  association.py  association.ui  batchMoving.py  batchMoving.ui  delete.py  delete.ui  replacePoint.py  replacePoint.ui  run_Path_Track.py  run_Path_Track.ui  template.py  template.ui
core/draw/: Ui_delete.py  Ui_delete_chain.py  Ui_delete_linkage.py  Ui_delete_point.py  Ui_draw_delete_chain.py  Ui_draw_delete_linkage.py  Ui_draw_delete_point.py  Ui_draw_edit_link.py  Ui_draw_edit_point.py  Ui_draw_edit_stay_chain.py  Ui_draw_link.py  Ui_draw_point.py  Ui_draw_stay_chain.py  Ui_edit_chain.py  Ui_edit_link.py  Ui_edit_point.py  Ui_edit_stay_chain.py  Ui_link.py  Ui_point.py  Ui_stay_chain.py  __init__.py  delete.ui  delete_chain.py  delete_linkage.py  delete_linkage.ui  delete_point.py  delete_point.ui  draw_delete_chain.py  draw_delete_chain.ui  draw_delete_linkage.py  draw_delete_point.py  draw_edit_link.py  draw_edit_point.py  draw_edit_stay_chain.py  draw_link.py  draw_point.py  draw_stay_chain.py  edit_chain.py  edit_chain.ui  edit_link.py  (+12 more)
core/entities/: Ui_batchMoving.py  Ui_delete.py  Ui_edit_chain.py  Ui_edit_link.py  Ui_edit_point.py  __init__.py  batchMoving.py  batchMoving.ui  delete.ui  edit_chain.py  edit_chain.ui  edit_link.py  edit_link.ui  edit_point.py  edit_point.ui
core/graphics/: Algorithm_preview.py  ChartGraphics.py  Path_Solving_preview.py  Path_Solving_preview.ui  Ui_Algorithm_preview.py  Ui_Path_Solving_preview.py  __init__.py  canvas.py  canvasItem.py  canvas_0.py  canvas_1.py  chart.py  color.py  matplotlibGraphics.py  nx_layout.py  nx_pydot.py  planarSolving.py
core/info/: Ui_about.py  Ui_color.py  Ui_editFileInfo.py  Ui_fileInfo.py  Ui_help.py  Ui_info.py  Ui_options.py  Ui_script.py  (+23 more)
docs/: adesign-api.md  changelog.md  commands.md  environment.md  index.md  inputs.md  intro.md  introduction.md  io.md  license.md  mechanism.md  metaheuristics-api.md  powered-by.md  pyslvs-api.md  pyslvs-lib.md  python-solvespace-api.md  python-solvespace-lib.md  references.md  releated.md  settings.md  synthesis.md  typing.md  version-control.md
example/: 15dotsFirefly.xml  crank_rocker.csv  muti_link.csv  test empty.xml  test path solving.xml
icons/: PathSolving.png~  chain.png~  main.icns  main.xcf  main_big.pdn  slider.png~  splash.pdn  title.pdn
manual/: .user manual.md.kate-swp  application examples.md  developer manual.md
platform/: appimage_recipe.sh  cygwinccompiler.diff  patch.diff  pyinstaller_recipe.sh  set_pycompiler.sh
pyslvs_ui/: __init__.py  __main__.py  icons.qrc  icons_rc.py  qt_patch.py
scripts/: appimage.sh  appimage_recipe.sh  compile_resource.py  entry.py  gen_doc.sh  hook-pyslvs_ui.py  pyinstaller.sh  uic.py
(+880 files in other folders)
