[metadata]
name = pyslvs_ui
version = attr: pyslvs_ui.__version__
description = A Python API compiler for universal Markdown syntax.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pyslvs,pyqt5,gui,mechanical-engineering,2d
license = AGPL
author = Yuan Chang
author_email = pyslvs@gmail.com
url = https://github.com/KmolYuan/Pyslvs-UI
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: X11 Applications :: Qt
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Typing :: Typed

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    importlib-metadata; python_version < '3.8'
    requests
    qtpy
    pyqt5
    ezdxf
    numpy
    matplotlib
    openpyxl
    lark-parser
    pyyaml
    qrcode
    pyslvs==21.01.dev0

[options.extras_require]
slvs = python-solvespace
splev = scipy

[options.package_data]
pyslvs_ui = py.typed

[options.entry_points]
console_scripts =
    pyslvs=pyslvs_ui.__main__:main
