[metadata]
name = pyslvs_ui
version = attr: pyslvs_ui.__version__
description = An open source planar linkage mechanism simulation and mechanical synthesis system.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pyslvs,pyqt5,gui,mechanical-engineering,2d
license = AGPL
author = Yuan Chang
author_email = pyslvs@gmail.com
url = https://github.com/KmolYuan/Pyslvs-UI
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: X11 Applications :: Qt
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Typing :: Typed

[bdist_wheel]
universal = 1

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    requests
    pyqt5
    ezdxf
    numpy
    matplotlib
    openpyxl
    lark-parser
    pyyaml
    qrcode
    pyslvs==21.06

[options.extras_require]
slvs = python-solvespace
splev = scipy

[options.package_data]
pyslvs_ui = py.typed

[options.entry_points]
console_scripts =
    pyslvs=pyslvs_ui.__main__:main

[mypy]
pretty = True
show_error_codes = True
show_column_numbers = True
ignore_missing_imports = True
allow_redefinition = True
warn_redundant_casts = True
warn_unreachable = True
strict_equality = True
